# shop-api

./: .env.template  .gitignore  Dockerfile  README.md  compose.yaml  main.py  makefile  pyproject.toml
api/application/: login_cotroller.py  product_cart_controller.py  users_cotroller.py
api/domain/: authenticator.py  env_vars.py  password_hash.py  product_request.py  product_response.py  shopping_cart_product_list_response.py  shopping_cart_product_request.py  shopping_cart_product_request_reduced.py  tags.py  user_response.py  uuid_value.py
api/routers/: cart.py  product.py  token.py  user.py
nginx/: Dockerfile  default.conf
src/products/application/: product_list_retriever.py  product_saver.py  product_searcher.py
src/products/domain/: product_repository.py
src/products/infrastructure/: in_file_product_repository.py
src/shopping_cart/application/: product_saver.py  product_searcher.py  shopping_cart_product_deleter.py  shopping_cart_product_searcher.py  shopping_cart_retriever.py  shopping_cart_saver.py
src/shopping_cart/domain/: product.py  product_repository.py  shopping_cart.py  shopping_cart_repository.py
src/shopping_cart/infrastructure/: in_file_product_repository.py  in_file_shopping_cart_repository.py
src/users/application/: user_saver.py  user_searcher.py
src/users/domain/: user.py  user_repository.py
src/users/infrastructure/: in_file_user_repository.py
tests/: conftest.py  product_const.py
tests/api/application/: test_product_cart_controller.py
tests/shopping_cart/: conftest.py
tests/users/: conftest.py
(+22 files in other folders)
