[project]
name = "shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "faker>=39.0.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
